[package]
name = "collect-ph-weibo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.6.1"
failure = "0.1.8"
headless_chrome = "0.9.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
thiserror = "1.0.30"
ureq = {version = "2.4.0" ,features = ["json"]}
xlsxwriter = "0.3.5"
